[package]
name = "multi_buy_service"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
bs58 = "0.5"
clap = { version = "4.6", features = ["derive"] }
dashmap = "6.1"
config = { version = "0.15", default-features = false, features = ["toml"] }
humantime-serde = "1.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.50" }
tonic = { version = "0.14", features = ["tls-native-roots", "tls-aws-lc"] }
tracing = "0.1"
triggered = "0.1"

# Oracles
custom-tracing = { git = "https://github.com/helium/oracles.git", branch = "main" }
helium-proto = { git = "https://github.com/helium/proto.git", branch = "master", features = [
    "services",
] }
task-manager = { git = "https://github.com/helium/oracles", branch = "main" }

[dev-dependencies]
tokio-stream = "0.1"
